# xmerge

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  Dockerfile  LICENSE  README.md  demo.ipynb  pyproject.toml  requirements.txt  sample_merge.json
.github/workflows/: ci.yml
benchmarks/: benchmark_results.json  break_investigate_randomB_v3.py  break_mergekit_v2.py  final_verification.json  final_verify.py  run_benchmarks.py  stress_test_results.json  stress_tests.py  test2_arch.json  test3_generation.json  test5_sensitivity.json  test6_memory.json  test_arch_fix.py  test_randomB.json
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
src/fusellm/: __init__.py  cli.py  llm_merge_solver.py  merge.py  merge_prod.py  merge_v2.py  utils.py
src/xmerge/: __init__.py  cli.py  merge_prod.py  merge_stream.py  utils.py
tests/: test_all_4_approaches.py  test_edge_cases.py  test_merge_prod.py  test_mistral_smollm2_bridge.py  test_utils.py
