[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusellm"
version = "0.1.0"
description = "Merge LLMs of different architectures and sizes without training"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.22.0",
    "datasets>=2.0.0",
]
[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fusellm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (GPU heavy, skip with -m 'not slow')",
]
