[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmerge"
version = "0.1.0"
description = "Merge LLMs of different architectures and sizes — representation-level merging, not weight-space interpolation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["llm", "merge", "fusion", "deep-learning", "pytorch", "transformers", "model-merging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
urls = {Homepage = "https://github.com/Griffith-7/xmerge", Source = "https://github.com/Griffith-7/xmerge"}
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.22.0",
    "datasets>=2.0.0",
]
[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["xmerge"]

[project.scripts]
xmerge = "xmerge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (GPU heavy, skip with -m 'not slow')",
]
