[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmerge"
version = "0.2.0"
description = "Merge LLMs of different architectures and sizes — representation-level merging, not weight-space interpolation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["llm", "merge", "fusion", "deep-learning", "pytorch", "transformers", "model-merging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
urls = {Homepage = "https://github.com/Griffith-7/xmerge", Source = "https://github.com/Griffith-7/xmerge"}
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.22.0",
    "datasets>=2.0.0",
]
[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-timeout>=2.0.0"]
dev-all = ["pytest>=7.0.0", "pytest-timeout>=2.0.0", "ruff>=0.1.0"]
docs = ["sphinx>=7.0", "furo>=2024.0", "sphinx-autodoc-typehints>=2.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["xmerge"]

[project.scripts]
xmerge = "xmerge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (GPU heavy, skip with -m 'not slow')",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["benchmarks", "offload"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501", "N803", "N806", "N812", "W293"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N", "I", "E402", "F541", "E701", "E702"]
